--- a/2-03/step1/index.html
+++ b/2-03/step1/index.html
@@ -27,10 +27,10 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+    window.alert('アプリ連携が完了しました。');
+    window.alert(3+2);
+</script>
 </body>
 </html>
