--- a/3-01/step1/index.html
+++ b/3-01/step1/index.html
@@ -27,10 +27,10 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
+    'use strict';
+
+    console.log(window.confirm('ゲームスタート！準備はいい？'));
     </script>
 </body>
 </html>
