--- a/3-03/step1/index.html
+++ b/3-03/step1/index.html
@@ -27,10 +27,17 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+    const answer=window.prompt('ヘルプを見ますか？');
+
+    if (answer==='yes'){
+        window.alert('タップでジャンプ、障害物を避けます。');
+    }else if(answer=='no'){
+        window.alert('ゲーム起動中...');
+    }else{
+        window.alert('yesかnoかでお答えください');
+    }
+</script>
 </body>
 </html>
