--- a/3-11/step2/index.html
+++ b/3-11/step2/index.html
@@ -27,10 +27,14 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    let jsbook={title:'JavaScript入門',price:2500,stock:3};
+
+for(let p in jsbook){
+console.log(p+'='+jsbook[p]);
+}
+</script>
 </body>
 </html>
