--- a/2-04/step1/index.html
+++ b/2-04/step1/index.html
@@ -18,7 +18,7 @@
 <main>
 <div class="container">
 <section>
-
+<p id="choice">ここに日時を表示します。</p>
 </section>
 </div><!-- /.container -->
 </main>
@@ -27,10 +27,9 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+    console.log(document.getElementById('choice'));
+</script>
 </body>
 </html>
