--- a/3-02/step1/index.html
+++ b/3-02/step1/index.html
@@ -27,10 +27,11 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    let answer=window.prompt('ヘルプを見ますか?');
+    console.log(answer);
+</script>
 </body>
 </html>
