--- a/3-02/step3/index.html
+++ b/3-02/step3/index.html
@@ -27,10 +27,15 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    const answer=window.prompt('ヘルプを見ますか?');
+    
+    if(answer==='yes'){
+        window.alert('タップでジャンプ　障害物を避けます。');
+    }
+
+</script>
 </body>
 </html>
