--- a/3-04/step1/index.html
+++ b/3-04/step1/index.html
@@ -27,10 +27,22 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    const number=Math.floor(Math.random()*6);
+    const answer=parseInt(window.prompt('数当てゲーム。０～５の数字を入力してね'));
+    let message;
+    if(answer===number){
+        message='あたり';
+    }else if(answer<number){
+        message='残念でした！もっと大きい';
+    }else if(answer>number){
+        message='残念でした！もっと小さい';
+    }else{
+        message='0~5の数字を入力してね';
+    }
+    window.alert(message);
+</script>
 </body>
 </html>
