--- a/3-05/step1/index.html
+++ b/3-05/step1/index.html
@@ -27,10 +27,18 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    const hour=new Date().getHours();
+
+    if(hour>=19 && hour <23){
+        window.alert('お弁当30％オフ');
+    }else if(hour===9 || hour===15){
+        window.alert('お弁当1個買ったら1個おまけ');
+    }else{
+        window.alert('お弁当いかがですか？');
+    }
+</script>
 </body>
 </html>
