--- a/3-06/step2/index.html
+++ b/3-06/step2/index.html
@@ -27,10 +27,14 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    let i=1;
+    while(i<=10){
+        console.log(i+'枚');
+        i+=1;
+    }
+</script>
 </body>
 </html>
