--- a/3-07/step1/index.html
+++ b/3-07/step1/index.html
@@ -27,10 +27,20 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+    let enemy=100;
+    let count=0;
+    window.alert('戦闘開始');
+
+    while(enemy>0){
+        const attack=Math.floor(Math.random()*30)+1;
+        console.log('モンスターに'+attack+'のダメージ');
+        enemy-=attack;
+        count+=1;
+    }
+
+    console.log(count+'回でモンスターを倒した');
+</script>
 </body>
 </html>
