--- a/3-08/step1/index.html
+++ b/3-08/step1/index.html
@@ -27,10 +27,15 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use script';
+
+    function total(price){
+        const tax=0.1;
+        return price+price*tax;
+    }
+
+    console.log('コーヒーメーカーの値段は'+total(8000)+'円（税込み）です');
+</script>
 </body>
 </html>
