--- a/3-10/step1/index.html
+++ b/3-10/step1/index.html
@@ -27,10 +27,15 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    let todo=['デザインカンプ作成','データ整理','勉強会の申込み','牛乳買う'];
+    todo.push('歯医者さんに行く');
+    for(let item of todo){
+        const li=`<li>${item}</li>`;
+        console.log(li);
+    }
+</script>
 </body>
 </html>
