--- a/3-11/step1/index.html
+++ b/3-11/step1/index.html
@@ -27,10 +27,15 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="script.js"></script>
 <script>
-    `use strict`;
-    console.log("よく柿食う客だ");
-    </script>
+    'use strict';
+
+    let jsbook={title:'JavaScript入門',price:2500,stock:3};
+    console.log(jsbook);
+    console.log(jsbook.title);
+    console.log(jsbook['price']);
+    jsbook.stock=10;
+    console.log(jsbook.stock);
+</script>
 </body>
 </html>
